setup redis for history chat