@@ -1,10 +1,13 @@
 package com.nhattung.chatbotservice.service;
 
+import com.nhattung.chatbotservice.entity.ChatMessage;
 import com.nhattung.chatbotservice.entity.ChatSession;
 import com.nhattung.chatbotservice.repository.GeminiClient;
 import com.nhattung.chatbotservice.request.GeminiRequest;
 import com.nhattung.chatbotservice.response.GeminiResponse;
+import feign.FeignException;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 
@@ -14,51 +17,77 @@ import java.util.List;
 
 @Service
 @RequiredArgsConstructor
+@Slf4j
 public class GeminiService {
 
     private final GeminiClient geminiClient;
     private final ChatSessionService chatSessionService;
 
-    @Value("${gemini.api-key}")
-    private String apiKey;
-
     public String generateResponse(String prompt, String sessionId) {
-        // Lấy hoặc tạo phiên chat
-        ChatSession session = chatSessionService.getOrCreateSession(sessionId);
 
-        // Thêm tin nhắn của người dùng vào phiên
+        // 1. THÊM TIN NHẮN TRƯỚC khi lấy session
         chatSessionService.addMessageToSession(sessionId, "user", prompt);
+
+        // 2. Lấy session ĐÃ CẬP NHẬT
+        ChatSession session = chatSessionService.getOrCreateSession(sessionId);
+        log.info("Session Messages: {}", session.getMessages());
+
 
         // Tạo nội dung từ lịch sử chat
         List<GeminiRequest.Content> contents = createContentsFromHistory(session);
+        log.info("Generated Contents for Gemini: {}", contents);
 
         // Tạo request
         GeminiRequest.GenerationConfig config = new GeminiRequest.GenerationConfig(0.7, 2048, 0.95, 40.0);
         GeminiRequest request = new GeminiRequest(contents, config);
 
-        // Gọi API Gemini
-        GeminiResponse response = geminiClient.generateContent("Bearer " + apiKey, request);
 
-        // Xử lý response
-        String generatedText = extractResponseText(response);
+        try {
+            // Gọi API Gemini
+            GeminiResponse response = geminiClient.generateContent(request);
 
-        // Lưu phản hồi vào phiên chat
-        if (!generatedText.equals("Không nhận được phản hồi từ Gemini AI")) {
-            chatSessionService.addMessageToSession(sessionId, "model", generatedText);
+            // Xử lý response
+            String generatedText = extractResponseText(response);
+
+            // Lưu phản hồi vào phiên chat
+            if (!generatedText.equals("Không nhận được phản hồi từ Gemini AI")) {
+                chatSessionService.addMessageToSession(sessionId, "model", generatedText);
+            }
+
+            return generatedText;
+        } catch (FeignException e) {
+            log.error("Lỗi khi gọi Gemini API: {}", e.getMessage());
+            return "Có lỗi xảy ra khi gọi Gemini API: " + e.getMessage();
+        } catch (Exception e) {
+            log.error("Lỗi không xác định: {}", e.getMessage());
+            return "Có lỗi xảy ra: " + e.getMessage();
         }
 
-        return generatedText;
     }
 
     private List<GeminiRequest.Content> createContentsFromHistory(ChatSession session) {
         List<GeminiRequest.Content> contents = new ArrayList<>();
 
-        for (ChatSession.ChatMessage message : session.getMessages()) {
-            GeminiRequest.Part part = new GeminiRequest.Part(message.getContent());
-            GeminiRequest.Content content = new GeminiRequest.Content(
-                    Collections.singletonList(part),
-                    message.getRole()
-            );
+        if (session == null || session.getMessages() == null || session.getMessages().isEmpty()) {
+            // Return at least an empty content if no history exists
+            GeminiRequest.Part part = new GeminiRequest.Part("");
+            GeminiRequest.Content content = new GeminiRequest.Content(List.of(part), "user");
+            contents.add(content);
+            return contents;
+        }
+
+        for (ChatMessage message : session.getMessages()) {
+            if (message != null && message.getContent() != null && !message.getContent().isBlank()) {
+                GeminiRequest.Part part = new GeminiRequest.Part(message.getContent());
+                GeminiRequest.Content content = new GeminiRequest.Content(List.of(part), message.getRole());
+                contents.add(content);
+            }
+        }
+
+        // Ensure we never return empty contents
+        if (contents.isEmpty()) {
+            GeminiRequest.Part part = new GeminiRequest.Part("");
+            GeminiRequest.Content content = new GeminiRequest.Content(List.of(part), "user");
             contents.add(content);
         }
 
